# netbox-plugin-netisp

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  mkdocs.yml  pyproject.toml  tasks.py
development/: base_configuration.py
docs/: index.md  requirements.txt
netbox_netisp/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_netisp/api/: serializers.py  urls.py  views.py
netbox_netisp/docs/: index.md
netbox_netisp/migrations/: 0001_initial.py  0002_auto_20210410_0321.py~  0002_customer_slug.py  0003_address.py  0004_auto_20210215_1959.py  0005_customer_birthday.py  0006_auto_20210215_2054.py  0007_auto_20210215_2105.py  0008_address_slug.py  0009_auto_20210215_2317.py  0010_billingpackage.py  0011_account.py  0012_equipment.py  0013_equipment_device_type.py  0014_customerpremiseequipment.py  0015_auto_20210228_0055.py  0016_antennaprofile_radioaccesspoint.py  0017_antennaprofile_name.py  0018_fiberservice_service_wirelessservice.py  0019_radioaccesspoint_ip_address.py  0019_radioaccesspoint_ip_address.py~  0020_employee_ticket.py  0021_auto_20210315_0140.py  0022_ticket_type.py  0023_ticket_status.py  0024_auto_20210317_0048.py  0025_auto_20210326_1622.py  0026_auto_20210326_1633.py  0027_auto_20210326_2122.py  0028_service_status.py  0029_auto_20210328_0335.py  0030_auto_20210328_0442.py  0031_delete_wirelessinstallticket.py  0032_auto_20210330_2100.py  0033_auto_20210422_2130.py  0034_accountattachment.py  0035_rename_accountattachment_attachment.py  0036_auto_20210423_1702.py  (+3 more)
(+30 files in other folders)
